--- a/themes/yilia/layout/_partial/after-footer.ejs
+++ b/themes/yilia/layout/_partial/after-footer.ejs
@@ -14,6 +14,15 @@
 	}
 </script>
 
+
+<script src="<%- theme.js_cdn.jquery %>"></script>
+
+<% if (theme.leancloud_visitors.enable){ %>
+//这是自定一个js文件,放在 layout\_parial\post 目录 leancloud.ejs中
+<%- partial('post/leancloud') %> 
+<% } %>
+
+
 <%- partial('script') %>
 
 <% if (theme.mathjax){ %>
