--- a/themes/yilia/layout/_partial/article.ejs
+++ b/themes/yilia/layout/_partial/article.ejs
@@ -73,6 +73,8 @@
     </div>
   </div>
 </article>
+
+
 <% if (!index){ %>
   <%- partial('post/nav') %>
 <% } %>
@@ -80,6 +82,15 @@
 
 
 <% if (!index && post.comments){ %>
+
+  <% if (theme.uyan){ %>
+    <%- partial('post/uyan', {
+          key: post.slug,
+          title: post.title,
+          url: config.url+url_for(post.path)
+      }) %>
+  <% } %>
+
   <% if (theme.duoshuo){ %>
   <%- partial('post/duoshuo', {
       key: post.slug,
