--- a/themes/yilia/layout/_partial/article.ejs
+++ b/themes/yilia/layout/_partial/article.ejs
@@ -10,10 +10,10 @@
     <% } %>
     <div class="article-entry" itemprop="articleBody">
       <% if (post.excerpt && index){ %>
-        <%- post.excerpt %>
+        <!-- <%- post.excerpt %>
         <% if (theme.excerpt_link) { %>
           <a class="article-more-a" href="<%- url_for(post.path) %>#more"><%= theme.excerpt_link %> >></a>
-        <% } %>
+        <% } %> -->
       <% } else { %>
         <%- post.content %>
       <% } %>
@@ -98,7 +98,7 @@
       url: config.url+url_for(post.path)
     }) %>
   <% } %>
-  
+
   <% if (theme.wangyiyun){ %>
   <%- partial('post/wangyiyun', {
       key: post.slug,
